#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */

/* Type definitions */
struct dio {int dummy; } ;
struct bio {int dummy; } ;

/* Variables and functions */
 struct bio* dio_await_one (struct dio*) ; 
 int /*<<< orphan*/  dio_bio_complete (struct dio*,struct bio*) ; 

__attribute__((used)) static void dio_await_completion(struct dio *dio)
{
	struct bio *bio;
	do {
		bio = dio_await_one(dio);
		if (bio)
			dio_bio_complete(dio, bio);
	} while (bio);
}